--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -49,9 +49,20 @@ World Wide Web Consortium,
 \emph{\href{http://www.w3.org/2004/04/webapps-cdf-ws/}{The W3C Workshop on Web Applications and Compound Documents}},  
 2004.
 
-
 \bibitem{pilgrim09}
 Mark Pilgrim,
 \emph{\href{http://diveintohtml5.info/index.html}{Dive Into HTML5}},  
 2009-2011.
+
+\bibitem{nodejs15}
+Node.js Foundation,
+\emph{\href{https://nodejs.org/}{Node.js}},  
+2015
+
+\bibitem{nodesummit12}
+Ryan Dahl,
+\emph{\href{https://youtu.be/Fc26auhSLqM?t=1m32s}{Ryan Dahl Interview at Node Summit 2012}},  
+2012
+
+
 \end{thebibliography}
