--- a/conclusions/conclusions.tex
+++ b/conclusions/conclusions.tex
@@ -2,5 +2,5 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-\chapter{Conclusions}
-\section{Open Source Movement}
+\chapter{Conclusions} \label{conclusions}
+\section{Open Source Movement} \label{opensourcemovement}
