Finished Tech Overview of entire MEAN Stack

--- a/arch/systemarch.tex
+++ b/arch/systemarch.tex
@@ -6,7 +6,7 @@
 \section{Client-Server Pattern} \label{clientserverpattern}
 \subsection{Server}
 \subsection{Client}
-\section{Model-View-Controller Pattern}
+\section{Model-View-Controller Pattern} \label{mvcpattern}
 \subsection{Model}
 \subsection{View}
 \subsection{Controller}
@@ -16,13 +16,13 @@
 \subsubsection{Gamepad} \label{gamepad}
 \subsubsection{Device Orientation} \label{deviceorientation}
 \subsubsection{Voice Commands} \label{voicecommands}
-\subsubsection{Custom Input}
+\subsubsection{Custom Input} \label{custominput}
 \subsection{Output Modules}
 \subsubsection{Data Monitor} \label{datamonitor}
 \subsubsection{Live Video} \label{livevideo}
 \subsubsection{Live Audio}
 \subsubsection{Geolocation}
-\subsubsection{Custom Data}
+\subsubsection{Custom Data} \label{customdata}
 \subsection{Utility Modules}
 \subsubsection{Script Execution}
-\subsubsection{Profile Management}
+\subsubsection{Profile Management} \label{profilemanagement}
