--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -2,8 +2,8 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-\addcontentsline{toc}{chapter}{Bibliography}
-
+\addcontentsline{toc}{chapter}{References}
+\renewcommand{\bibname}{References}
 \begin{thebibliography}{99}
 
 \bibitem{httpW3}
@@ -54,6 +54,11 @@ Mark Pilgrim,
 \emph{\href{http://diveintohtml5.info/index.html}{Dive Into HTML5}},  
 2009-2011.
 
+\bibitem{w3cvalidation}
+World Wide Web Consortium,
+\emph{\href{https://validator.w3.org/}{W3C Markup Validation Service}},  
+1994-2012
+
 \bibitem{nodejs15}
 Node.js Foundation,
 \emph{\href{https://nodejs.org/}{Node.js}},  
@@ -63,6 +68,11 @@ Node.js Foundation,
 Ryan Dahl,
 \emph{\href{https://youtu.be/Fc26auhSLqM?t=1m32s}{Ryan Dahl Interview at Node Summit 2012}},  
 2012
+
+\bibitem{mongodb11}
+MongoDB inc.,
+\emph{\href{http://docs.mongodb.org/ecosystem/drivers/}{MongoDB Drivers}},  
+2011-2015
 
 
 \end{thebibliography}
