--- a/future/futuredev.tex
+++ b/future/futuredev.tex
@@ -2,7 +2,7 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-\chapter{Future Development}
+\chapter{Future Development} \label{futuredevelopment}
 \section{Maintenance and Support}
-\section{Scalability}
+\section{Scalability} \label{scalability}
 \section{New Additions to the Standard}
