--- a/bibliography/bibliography.tex
+++ b/bibliography/bibliography.tex
@@ -74,5 +74,15 @@ MongoDB inc.,
 \emph{\href{http://docs.mongodb.org/ecosystem/drivers/}{MongoDB Drivers}},  
 2011-2015
 
+\bibitem{google10}
+Google,
+\emph{\href{https://docs.angularjs.org/api?PHPSESSID=cae8e98e7ca559b4605d75c813b358ee}{Angular JS API Docs}},  
+2010-2015
+
+\bibitem{coppelia15}
+Coppelia Robotics,
+\emph{\href{http://www.coppeliarobotics.com/helpFiles/en/writingCode.htm}{Writing code in and around V-REP}},  
+2015
+
 
 \end{thebibliography}
