--- a/pfc.tex
+++ b/pfc.tex
@@ -44,12 +44,19 @@
 \author{Daniel Peiró Moreno}
 \date{2015}
 
+
+
 %%%%%% Import Packages %%%%%%
 \usepackage{graphicx}
 \usepackage{svg}
 \usepackage{subfig}
 \usepackage{epigraph}
-\usepackage{hyperref}
+\usepackage[pdftex,
+            pdfauthor={Daniel Peiró Moreno},
+            pdftitle={HTML5 Robot User Interface},
+            pdfsubject={HRUI PFC Report},
+            pdfproducer={Latex},
+            pdfcreator={pdflatex}]{hyperref}
 \usepackage{makeidx}
 \usepackage{minted}
 \usepackage{lipsum}
