--- a/annexes/annexes.tex
+++ b/annexes/annexes.tex
@@ -3,4 +3,4 @@
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
 \chapter{Annexes}
-\section{User Manual}
+\section{User Manual} \label{usermanual}
