--- a/planning/planning.tex
+++ b/planning/planning.tex
@@ -2,9 +2,8 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-\chapter{Project Planning}
+\chapter{Project Planning} \label{planning}
 \section{Work Breakdown Structure}
 \section{Gantt Chart}
-\section{Revision Control}
 \section{Budget}
 \section{Results}
